[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gameplay/floor.png" type="Texture" id=1]
[ext_resource path="res://scripts/networking/SteamConnect.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkRandomNumberGenerator.gd" type="Script" id=3]
[ext_resource path="res://scenes/debug/DebugOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/MartialHero.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/menu/MatchUI.gd" type="Script" id=6]
[ext_resource path="res://scripts/gameplay/LocalStageCamera.gd" type="Script" id=7]
[ext_resource path="res://assets/gameplay/debug/gridtexture.png" type="Texture" id=8]
[ext_resource path="res://scenes/menu/GameplayUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/menu/PauseMenu.tscn" type="PackedScene" id=10]

[sub_resource type="SGRectangleShape2D" id=1]
extents_x = 173670400
extents_y = 38020160

[sub_resource type="SGRectangleShape2D" id=2]
extents_x = 3276800
extents_y = 54198272

[node name="SteamGame" type="Node2D"]
script = ExtResource( 2 )

[node name="Messages" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="Messages"]
anchor_right = 1.0
margin_bottom = 14.0
align = 1

[node name="ResetButton" type="Button" parent="Messages"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "RESET"

[node name="SyncLostLabel" type="Label" parent="Messages"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_bottom = 14.0
text = "Regaining sync..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( -300, -100 )
fixed_position_x = -19660800
fixed_position_y = -6553600

[node name="ClientPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 300, -100 )
fixed_position_x = 19660800
fixed_position_y = -6553600

[node name="Johnny" type="Node" parent="."]
script = ExtResource( 3 )

[node name="FloorStaticBody" type="SGStaticBody2D" parent="."]
collision_layer = 2

[node name="FloorCollisionShape" type="SGCollisionShape2D" parent="FloorStaticBody"]
scale = Vector2( 1, 0.0499878 )
fixed_scale_y = 3276
shape = SubResource( 1 )

[node name="Sprite1" type="Sprite" parent="FloorStaticBody"]
position = Vector2( -1004, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite2" type="Sprite" parent="FloorStaticBody"]
position = Vector2( -703, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite3" type="Sprite" parent="FloorStaticBody"]
position = Vector2( -402, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite4" type="Sprite" parent="FloorStaticBody"]
position = Vector2( -101, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite5" type="Sprite" parent="FloorStaticBody"]
position = Vector2( 200, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite6" type="Sprite" parent="FloorStaticBody"]
position = Vector2( 501, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite7" type="Sprite" parent="FloorStaticBody"]
position = Vector2( 802, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite8" type="Sprite" parent="FloorStaticBody"]
position = Vector2( 1103, 115 )
scale = Vector2( 4.71094, 4.50781 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="CeilingStaticBody" type="SGStaticBody2D" parent="."]
position = Vector2( 0, -1350 )
fixed_position_y = -88473600
collision_layer = 8

[node name="FloorCollisionShape" type="SGCollisionShape2D" parent="CeilingStaticBody"]
scale = Vector2( 1, 0.0499878 )
fixed_scale_y = 3276
shape = SubResource( 1 )

[node name="FloorSprite" type="Sprite" parent="CeilingStaticBody"]
position = Vector2( 2.00272e-05, 0 )
scale = Vector2( 1.88679, 0.05 )
texture = ExtResource( 1 )

[node name="WallStaticBody_L" type="SGStaticBody2D" parent="."]
position = Vector2( -1200, -798 )
fixed_position_x = -78643200
fixed_position_y = -52297728
collision_layer = 4

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="WallStaticBody_L"]
shape = SubResource( 2 )

[node name="WallSprite" type="Sprite" parent="WallStaticBody_L"]
position = Vector2( 2.28286e-05, 8.35657e-05 )
scale = Vector2( 0.0754718, 1.42341 )
texture = ExtResource( 1 )

[node name="WallStaticBody_R" type="SGStaticBody2D" parent="."]
position = Vector2( 1200, -798 )
fixed_position_x = 78643200
fixed_position_y = -52297728
collision_layer = 4

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="WallStaticBody_R"]
shape = SubResource( 2 )

[node name="WallSprite" type="Sprite" parent="WallStaticBody_R"]
position = Vector2( 2.28286e-05, 8.35657e-05 )
scale = Vector2( 0.0754718, 1.42341 )
texture = ExtResource( 1 )

[node name="LocalStageCamera" type="Camera2D" parent="."]
position = Vector2( 0, -540 )
current = true
zoom = Vector2( 1.25, 1.25 )
limit_left = -1200
limit_top = -1350
limit_right = 1200
limit_bottom = 0
limit_smoothed = true
editor_draw_limits = true
script = ExtResource( 7 )

[node name="MatchUI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="GameplayUI" parent="MatchUI" instance=ExtResource( 9 )]

[node name="DebugOverlay" parent="MatchUI" instance=ExtResource( 4 )]
anchor_top = 0.12
anchor_bottom = 0.12

[node name="PauseMenu" parent="MatchUI" instance=ExtResource( 10 )]
visible = false
